# analogcolor

./: .gitmodules  BUILD.md  LICENSE  README.md
src/: CMakeLists.txt  main.c
src/libanalog/: ntsc.c  ntsc.h
